--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -18,3 +18,6 @@ warning=Warnung
 select_table_to_add_row=Bitte wählen Sie eine Tabelle aus, um eine Zeile hinzuzufügen.
 file_delete_error=Fehler beim Löschen der Datei!
 select_table_to_delete=Bitte wählen Sie eine Tabelle aus, um sie zu löschen.
+table=Tabelle
+choose_language=Sprache wählen
+language=Sprache
