--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,3 +18,6 @@ warning=Warning
 select_table_to_add_row=Please select a table to add a row.
 file_delete_error=Error deleting file!
 select_table_to_delete=Please select a table to delete.
+table=Table
+choose_language=Choose Language
+language=Language
