--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -21,3 +21,4 @@ select_table_to_delete=Bitte wählen Sie eine Tabelle aus, um sie zu löschen.
 table=Tabelle
 choose_language=Sprache wählen
 language=Sprache
+tags=Tags
