--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -21,3 +21,5 @@ select_table_to_delete=Please select a table to delete.
 table=Table
 choose_language=Choose Language
 language=Language
+tags=Tags
+
