--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,4 +22,6 @@ table=Table
 choose_language=Choose Language
 language=Language
 tags=Tags
-
+tag_vegetable=Vegetable
+tag_fruit=Fruit
+tag_meat=Meat
